# valkyrie

./: .gitignore  CMakeLists.txt  Makefile  README.md  context.json  index.vhtml  pch.hpp  valkyrie.cpp
core/: constants.hpp  context.cpp  context.hpp  output.hpp
include/: context.hpp  node.hpp  trim.hpp
include/core/: build.hpp  constants.hpp  context.hpp  output.hpp
include/nodes/: node.hpp  show_statement.hpp
include/utils/: args.hpp  trim.hpp
nodes/: for_statement.cpp  for_statement.hpp  if_statement.cpp  if_statement.hpp  node.cpp  node.hpp  show_statement.hpp  text.cpp  text.hpp
src/: context.cpp  for_statement.cpp  if_statement.cpp  node.cpp  show_statement.cpp  text.cpp  trim.cpp
src/core/: build.cpp  context.cpp
src/nodes/: for_statement.cpp  if_statement.cpp  node.cpp  show_statement.cpp  text.cpp
theme/: post.vhtml
utils/: trim.hpp
